fix perf-o-meter stale font color readability
CMK-28532

(cherry picked from commit f1897897f2871c3ac163339d7f178f505438e509)

--- a/packages/cmk-frontend/src/themes/facelift/scss/_status.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_status.scss
@@ -33,9 +33,12 @@ td.state {
   text-align: center;
 }
 
-table.data tr.data td.stale,
-table.data td.perfometer.stale div.title {
+table.data tr.data td.stale {
   color: $font-color-dimmed;
+}
+
+table.data td.perfometer.stale div.title {
+  color: $font-color-light-bg;
 }
 
 tr.groupheader .state span {
